21-production-alb-ingress/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: production
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
